Submit control template, navigation, setup for custom entry renderer

--- a/HelloPrism/HelloPrism/HelloPrism.csproj
+++ b/HelloPrism/HelloPrism/HelloPrism.csproj
@@ -17,5 +17,6 @@
   <ItemGroup>
     <Folder Include="ViewModels\" />
     <Folder Include="Views\" />
+    <Folder Include="Controls\" />
   </ItemGroup>
 </Project>
