--- a/HelloPrism/HelloPrism/HelloPrism.csproj
+++ b/HelloPrism/HelloPrism/HelloPrism.csproj
@@ -18,5 +18,6 @@
     <Folder Include="ViewModels\" />
     <Folder Include="Views\" />
     <Folder Include="Controls\" />
+    <Folder Include="Models\" />
   </ItemGroup>
 </Project>
