--- a/HelloPrism/HelloPrism/HelloPrism.csproj
+++ b/HelloPrism/HelloPrism/HelloPrism.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Prism.Unity.Forms" Version="7.0.0.396" />
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.280555" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,5 +20,7 @@
     <Folder Include="Views\" />
     <Folder Include="Controls\" />
     <Folder Include="Models\" />
+    <Folder Include="Services\" />
+    <Folder Include="Interfaces\" />
   </ItemGroup>
 </Project>
