--- a/HelloPrism/HelloPrism/HelloPrism.csproj
+++ b/HelloPrism/HelloPrism/HelloPrism.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
         <LangVersion>Latest</LangVersion>
   </PropertyGroup>
 
@@ -23,5 +23,6 @@
     <Folder Include="Models\" />
     <Folder Include="Services\" />
     <Folder Include="Interfaces\" />
+    <Folder Include="Converters\" />
   </ItemGroup>
 </Project>
